--- a/presentation/src/main/res/navigation/nav_competitions.xml
+++ b/presentation/src/main/res/navigation/nav_competitions.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_competitions"
-    app:startDestination="@id/competitions_fragment">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/nav_competitions"
+  app:startDestination="@id/competitions_fragment">
 
   <fragment
-      android:id="@+id/competitions_fragment"
-      android:name="com.mina_mikhail.base_mvvm.presentation.competitions.CompetitionsFragment"
-      tools:layout="@layout/fragment_competitions" />
+    android:id="@+id/competitions_fragment"
+    android:name="com.mina_mikhail.base_mvvm.presentation.competitions.CompetitionsFragment"
+    tools:layout="@layout/fragment_competitions">
+
+    <action
+      android:id="@+id/action_open_competition_details"
+      app:destination="@id/competition_details_fragment"
+      app:enterAnim="@anim/anim_slide_in_right"
+      app:exitAnim="@anim/anim_slide_out_left"
+      app:popEnterAnim="@anim/anim_slide_in_left"
+      app:popExitAnim="@anim/anim_slide_out_right"/>
+
+  </fragment>
+
+  <fragment
+    android:id="@+id/competition_details_fragment"
+    android:name="com.mina_mikhail.base_mvvm.presentation.competitions.competition_details.CompetitionDetailsFragment"
+    tools:layout="@layout/fragment_competition_details">
+
+    <argument
+      android:name="competitionID"
+      app:argType="integer" />
+
+  </fragment>
 
 </navigation>
