--- a/presentation/src/main/res/values-ar/styles.xml
+++ b/presentation/src/main/res/values-ar/styles.xml
@@ -52,4 +52,11 @@
     <item name="fontFamily">@font/almarai_medium</item>
   </style>
 
+  <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+    <item name="textAllCaps">false</item>
+    <item name="android:textSize">@dimen/text_size14</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="fontFamily">@font/almarai_medium</item>
+  </style>
+
 </resources>
