--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -64,4 +64,11 @@
     <!--    <item name="android:windowExitAnimation">@anim/slide_down</item>-->
   </style>
 
+  <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+    <item name="textAllCaps">false</item>
+    <item name="android:textSize">@dimen/text_size14</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="fontFamily">@font/poppins_medium</item>
+  </style>
+
 </resources>
